--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="mainhide1">
     <div class="sub1" id="secondsubleft">
         <div class="colr1">Tasks </div>
-        <div class="colr2">&nbsp; List</div1>
+        <div class="colr2">&nbsp; List
     </div>
     </div>
    
@@ -40,7 +40,7 @@
 
 
 <div id="cardcontainer" class="maincon">
-    <div  id="in1" class="colr2 colr3" >No Items In the todo list</div>
+    <div  id="in1" class="colr3" >No Items In the todo list</div>
 </div>
 </div>
 <div id="popupbox" class="popupbox hide">
@@ -55,7 +55,7 @@
 <button id="hbutton " class="final1 " onclick="bbh()"><img src="./back.PNG" class="smal1"/> back
 
 </button>
-<span class="final2 " id="hdiv">hiiiiiiiiiiiiiiiiiiiii</span>
+<div class="final2 " id="hdiv">hiiiiiiiiiiiiiiiiiiiii</div>
 
 </div>
 
