--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="second">
 
     </div>
+    <div class="third">
+        
+    </div>
     <div class="logo1"><div class="u1">pb</div><div class="u2"> &nbsp; prepbytes</div></div>
 
     
